# bioAF

./: .env.example  .gitignore  .markdownlint.json  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  bioaf  install-gcp.sh  install.sh
backend/: entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 001_initial_schema.py  002_phase5_data_viz.py  003_phase6_gitops_packages.py  004_phase7_ops_polish.py  005_add_minseqe_fields_samples.py  006_add_minseqe_fields_batches.py  007_add_minseqe_fields_pipeline_runs.py  008_create_controlled_vocabularies.py  009_create_pipeline_run_reviews.py  010_update_experiment_status_enum.py  011_seed_controlled_vocabularies.py  012_create_reference_datasets.py  013_create_reference_dataset_files.py  014_create_pipeline_run_references.py  015_upgrade_projects_table.py  016_create_project_samples.py  017_add_project_id_to_related_tables.py  018_create_analysis_snapshots.py  019_add_compute_stack_config.py  020_add_naming_profiles_ingest_tables.py  021_add_pipeline_trigger_tables.py  022_add_gcp_config.py  023_phase17_terraform_executor.py  024_phase18_gcs_bucket_infra.py  025_phase19_compute_stack_deploy.py  026_phase20_live_pipeline_execution.py  027_phase21_auto_ingest_pubsub.py  028_phase22_notebook_k8s_columns.py  029_add_gcp_service_account_email.py  030_create_experiment_field_defaults.py  031_add_budget_currency.py  032_create_orphaned_resources.py  033_add_file_source_metadata.py  034_backfill_file_source_metadata.py  035_session_credentials_and_last_login.py  036_custom_rbac_permission_tables.py  037_versioned_compute_environments.py  038_rename_to_compute_sessions.py  039_add_work_nodes_configure_permission.py  040_add_smtp_credential_columns.py  (+37 more)
backend/app/: config.py  database.py  gcp_zones.py  logging_config.py  main.py
backend/app/adapters/: base.py  registry.py
backend/app/api/: access_logs.py  activity_feed.py  audit.py  auth.py  auto_ingest.py  backups.py  barcode_maps.py  (+65 more)
backend/tests/: conftest.py  test_access_logs.py  test_activity_feed.py  test_adapters.py  test_admin_user_management.py  test_audit.py  test_auth.py  test_auto_ingest_api.py  test_backups.py  test_barcode_map_model.py  test_barcode_pattern_only.py  test_barcode_permissions.py  test_barcode_service.py  test_batch_code_resolve.py  test_batch_position.py  test_batches.py  test_billing_export.py  test_bootstrap.py  test_bootstrap_environments.py  test_bootstrap_metadata.py  test_bootstrap_setup_code.py  test_bucket_naming_invariant.py  test_budget_service.py  test_build_status_endpoint.py  test_cellxgene.py  test_cloud_logging.py  test_cluster_status.py  test_code_service.py  test_component_toggle_audit.py  test_component_toggle_image_build.py  test_components.py  test_compute.py  test_compute_naming_invariant.py  test_compute_terraform.py  test_content_tokens.py  test_costs.py  test_create_admin.py  test_credential_injector.py  test_csv_preview.py  test_csv_upload.py  (+229 more)
cli/: pyproject.toml
sdk/python/: pyproject.toml
(+720 files in other folders)
