[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioaf-backend"
version = "0.1.0"
description = "bioAF control plane backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "google-cloud-secret-manager>=2.18",
    "httpx>=0.27",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.mypy]
python_version = "3.12"
strict = true
