[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioaf-backend"
version = "0.1.0"
description = "bioAF control plane backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "google-cloud-secret-manager>=2.18",
    "httpx>=0.27",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_any_generics = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
disable_error_code = ["assignment", "arg-type", "attr-defined", "union-attr", "return-value", "var-annotated", "import-untyped", "dict-item"]
