[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioaf-cli"
version = "0.1.0"
description = "bioAF deployment CLI"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "google-cloud-resource-manager>=1.12",
    "google-cloud-billing>=1.13",
    "google-cloud-service-usage>=1.8",
    "google-api-python-client>=2.100",
]

[project.scripts]
bioaf = "bioaf_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/bioaf_cli"]
