[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioaf-sdk"
version = "0.1.0"
description = "Python SDK for bioAF analysis snapshots"
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
anndata = ["anndata>=0.9", "pandas>=1.5"]
matplotlib = ["matplotlib>=3.5"]
checkpoint = ["pandas>=1.5", "pyarrow>=10.0"]
dev = ["pytest>=7.0", "responses>=0.23", "anndata>=0.9", "pandas>=1.5", "numpy>=1.21"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 120
